Archive2/bf/1bfb9d7f229aee/output
main.cpp: In function 'void f(const Point&)':
main.cpp:9:31: error: 'x' is not a constant expression
     constexpr auto z = x.size();
                               ^
