Archive2/bf/1bfb9d7f229aee/main.cpp
struct Point
{
    constexpr int size() const { return 1; }
};


void f(const Point &x)
{
    constexpr auto z = x.size();
    static_assert(z == 1, "");
}

int main()
{
    Point p;
    f(p);
}